# lab6

./: CMakeLists.txt  main.cpp
Operations/: Operations.cpp  Operations.h
Repo/: Repo.cpp  Repo.h
Square/: Square.cpp  Square.h
Tests/: Tests.cpp  Tests.h
console/: console.cpp  console.h
menu/: menu.cpp  menu.h
